<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.blackrice000.hoverboard.SetActivity">

    <Button
        android:id="@+id/btn_Back_1"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/Button_Back"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_Send"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Scan_Linear"
        android:text="@string/Button_Send"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/Scan_Linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Scan"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="0.5"
            android:text="@string/Button_Scan"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_Discover"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_weight="0.5"
            android:text="@string/Button_Discover"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Connect_Linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Latitude_Linear"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Disconnect"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.5"
            android:text="@string/Button_Disconnect"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_Connect"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.5"
            android:text="@string/Button_Connect"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Latitude_Linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_Back_1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_TurnOn"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Button_TurnOn"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_TurnOff"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Button_TurnOff"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="Send Data"
        android:ems="10"
        android:id="@+id/Edit_Data"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText"
        android:textSize="45sp"
        android:layout_below="@+id/btn_Send"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        style="@android:style/Widget.Holo.EditText"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/TV_Receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Receive Data"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/Edit_Data"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold" />

</RelativeLayout>
